--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: shell
 sudo: false
 script:
-  - bash -c 'shopt -s globstar; shellcheck **/*.sh .git-hooks/*
+  - bash -c 'shopt -s globstar; shellcheck **/*.sh .git-hooks/*'
